update and add new notebooks (tokenization subject)

--- a/notebooks/07_explore_corpora.ipynb
+++ b/notebooks/07_explore_corpora.ipynb
@@ -893,10 +893,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['msaad@iugaza.edu.ps']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re \n",
+    "re.findall( '\\S+@\\S+' , 'From: msaad@iugaza.edu.ps Date Oct 09 2019')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['iugaza.edu.ps']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall( '\\S+@(\\S+)' , 'From: msaad@iugaza.edu.ps Date Oct 09 2019')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'رخصة قيادة رخصة  ؟    \" رخصة \"   .   رخصة  !  '"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "line = 'رخصة قيادة رخصة ؟  \"رخصة\" .  رخصة ! '\n",
+    "line = re.sub(r\"([?.!\\\",؟])\", r\" \\1 \", line)\n",
+    "line"
+   ]
   }
  ],
  "metadata": {
