update and extend names

--- a/notebooks/clean_names.ipynb
+++ b/notebooks/clean_names.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "    names = file_handle.read().split('\\n')\n",
     "    file_handle.close()\n",
     "    print(len(names))\n",
-    "    names = list(set(names))\n",
+    "    names = list(sorted(set(names)))\n",
     "    print(len(names))\n",
     "    outfile = open(file_name, encoding='utf-8', mode='w')\n",
     "    for name in names:\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -40,12 +40,12 @@
      "output_type": "stream",
      "text": [
       "../corpus/names_female.txt\n",
-      "3999\n",
-      "903\n",
+      "1432\n",
+      "1432\n",
       "---------------------\n",
       "../corpus/names_male.txt\n",
-      "9453\n",
-      "1006\n",
+      "1003\n",
+      "1002\n",
       "---------------------\n"
      ]
     }
